force-app/main/default/objects/SCC_Terminal_ID__c/SCC_Terminal_ID__c.object-meta.xml
<CustomObject>
    <label>SCC Terminal ID</label>
    <nameField>
        <label>Terminal ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCC Terminal ID</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>