force-app/main/default/objects/SCC_Terminal_ID__c/fields/Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>