force-app/main/default/objects/SCC_Terminal_ID__c/fields/SCC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SCC_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>