force-app/main/default/objects/SCC_Terminal_ID__c/fields/SCC_Add_Time__c.field-meta.xml
<CustomField>
    <fullName>SCC_Add_Time__c</fullName>
    <label>Add Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>