force-app/main/default/objects/SCC_Terminal_ID__c/fields/SCC_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>SCC_Branch_Code__c</fullName>
    <label>Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>