force-app/main/default/objects/SCC_Terminal_ID__c/fields/SCC_Teller_Id__c.field-meta.xml
<CustomField>
    <fullName>SCC_Teller_Id__c</fullName>
    <label>Teller Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>